# dsk_tools

./: .gitignore  CMakeLists.txt  README.md
.build/: build-linux.sh  build-macos.sh  build-win-i386.bat  build-win-mingw.bat  build-win-msvc.bat  vars-mingw-latest.cmd  vars-mingw-qt5.6.cmd  vars-msvc-latest.cmd
include/dsk_tools/: definitions.h  disk_image.h  dsk_tools.h  image_agat140.h  image_agat840.h  loader.h  loader_raw.h  utils.h  writer.h  writer_hxc_hfe.cpp  writer_hxc_hfe.h  writer_hxc_mfm.cpp  writer_hxc_mfm.h  writer_mfm.cpp  writer_mfm.h  writer_raw.cpp  writer_raw.h
src/: bas_tokens.h  bit_enums.h  charmaps.h  definitions.h  disk_image.cpp  disk_image.h  dsk_tools.cpp  filesystem.cpp  filesystem.h  fs_cpm.cpp  fs_cpm.h  fs_dos33.cpp  fs_dos33.h  fs_fil.cpp  fs_fil.h  fs_spriteos.cpp  fs_spriteos.h  host_helpers.cpp  host_helpers.h  image_agat140.cpp  image_agat140.h  image_agat840.cpp  image_agat840.h  image_fil.cpp  image_fil.h  loader.cpp  loader.h  loader_aim.cpp  loader_aim.h  loader_fil.cpp  loader_fil.h  loader_gcr.cpp  loader_gcr.h  loader_gcr_mfm.cpp  loader_gcr_mfm.h  loader_gcr_nib.cpp  loader_gcr_nib.h  loader_gcr_nic.cpp  loader_gcr_nic.h  loader_hxc_hfe.cpp  (+23 more)
src/filesystems/: filesystem.h  fs_cpm.cpp  fs_cpm.h  fs_dos33.cpp  fs_dos33.h  fs_fil.cpp  fs_fil.h  fs_host.cpp  fs_host.h  fs_host_helpers.h  fs_host_helpers_mac.mm  fs_spriteos.cpp  fs_spriteos.h
src/images/: disk_image.cpp  disk_image.h  image_agat140.cpp  image_agat140.h  image_agat840.cpp  image_agat840.h  image_fil.cpp  image_fil.h  image_pc360.cpp  image_pc360.h
src/loaders/: loader.cpp  loader.h  loader_aim.cpp  loader_aim.h  loader_fil.cpp  loader_fil.h  loader_hxc_hfe.cpp  loader_hxc_hfe.h  loader_hxc_mfm.cpp  loader_hxc_mfm.h  loader_imd.cpp  loader_imd.h  loader_mfm.cpp  loader_mfm.h  loader_nib.h  loader_nic.h  loader_raw.cpp  loader_raw.h
src/viewers/: agat_fonts.h  viewer.h  viewer_basic_agat.cpp  viewer_basic_agat.h  viewer_basic_apple.cpp  viewer_basic_apple.h  viewer_basic_mbasic.cpp  viewer_basic_mbasic.h  viewer_binary.cpp  viewer_binary.h  viewer_pics.cpp  viewer_pics.h  viewer_pics_agat.cpp  viewer_pics_agat.h  viewer_selectors.h  viewer_text.cpp  viewer_text.h
src/viewers/agat/: agat_16color.cpp  agat_16color.h  agat_4color.cpp  agat_4color.h  agat_apple.cpp  agat_apple.h  agat_base.cpp  agat_base.h  agat_common.h  agat_font.cpp  agat_font.h  agat_font_bft.cpp  agat_font_bft.h  agat_fonts.h  agat_mono.cpp  agat_mono.h  agat_text.cpp  agat_text.h
src/writers/: writer.cpp  writer.h  writer_hxc_hfe.cpp  writer_hxc_hfe.h  writer_hxc_mfm.cpp  writer_hxc_mfm.h  writer_mfm.cpp  writer_mfm.h  writer_raw.cpp  writer_raw.h
utils/: CMakeLists.txt  bail.hpp  cli_helpers.cpp  cli_helpers.h  fddconv.cpp  fddconv.h
